<resources>
    <string name="app_name">Flightscry</string>
    <string name="flight_number">Flight number</string>
    <string name="departure_time">Departure Time</string>
    <string name="arrival_time">arrival time</string>
    <string name="airport_code">Airport code</string>
    <string name="flight_information">Flight information</string>
    <string name="departure">Departure</string>
    <string name="airport_code_input_field">Airport code input field</string>
</resources>