<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <net.skyscanner.backpack.card.BpkCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cornerStyle="small"
        app:elevationLevel="focused"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <net.skyscanner.backpack.text.BpkText
                style="@style/bpkTextHeading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/departure" />


            <net.skyscanner.backpack.card.BpkCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cornerStyle="small"
                app:elevationLevel="focused">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/newEditTextId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:autofillHints="airportCode"
                    android:contentDescription="@string/airport_code_input_field"
                    android:text="@string/flight_information" />

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/flight_number" />

            </LinearLayout>
            </net.skyscanner.backpack.card.BpkCardView>


            <net.skyscanner.backpack.card.BpkCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cornerStyle="small"
                app:elevationLevel="focused">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/newEditTextId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:autofillHints="airportCode"
                        android:text="Airport Code"
                        tools:ignore="DuplicateIds" />

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/departure_time" />

                </LinearLayout>
            </net.skyscanner.backpack.card.BpkCardView>

            <net.skyscanner.backpack.card.BpkCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cornerStyle="small"
                app:elevationLevel="focused">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:autofillHints="airportCode"
                        android:text="@string/airport_code" />

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/arrival_time" />

                </LinearLayout>
            </net.skyscanner.backpack.card.BpkCardView>

        </LinearLayout>

    </net.skyscanner.backpack.card.BpkCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
